2009-08-10  Jonathan Pryor <jpryor@novell.com>

	* Makefile: Add ../monodoc/Resources/mdoc-html-format.xsl as a resource.

2009-08-06  Jonathan Pryor <jpryor@novell.com>

	* mdoc.exe.sources: Add ../../build/common/Consts.cs to the build.
	* Mono.Documentation/mdoc.cs: mdoc version is Consts.MonoVersion, not
	  some hard-coded, perpetually out-of-date version.

2009-08-02  Jonathan Pryor <jpryor@novell.com>

	* Mono.Documentation/monodocer.cs: Sometimes <AssemblyVersion/> is
	  found twice when it's actually present only once (!).  Attempt to
	  work around this by usinq LINQ instead of a foreach (which oddly
	  works...).

2009-07-31  Jonathan Pryor <jpryor@novell.com>

	* Mono.Documentation/monodocer.cs: Record attributes that are placed
	  on property get/set and event add/remove accessors.
	* Test/DocTest-v1.cs: Add attributes to some accessors.
	* Test/en.expected.importslashdoc/Mono.DocTest/Widget.xml,
	  Test/en.expected.since/Mono.DocTest/Widget.xml,
	  Test/en.expected/Mono.DocTest/Widget.xml,
	  Test/html.expected/Mono.DocTest/Widget.html,
	  Test/msxdoc-expected.importslashdoc.xml: Flush.

2009-06-23  Jonathan Pryor <jpryor@novell.com>

	* Mono.Documentation/monodocer.cs: Don't generate an exception when an
	  enumeration contains multiple names with the same value.
	  Fixes #515030.
	* Test/DocTest-v1.cs: Add test for #515030.
	* Test/en.expected/Mono.DocTest/Color.xml,
	  Test/en.expected.since/Mono.DocTest/Color.xml,
	  Test/html.expected/Mono.DocTest/Color.html,
	  Test/msxdoc-expected.importslashdoc.xml,
	  Test/en.expected.importslashdoc/Mono.DocTest/Color.xml: Flush.

2009-04-18  Jonathan Pryor <jpryor@novell.com>

	* Mono.Documentation/webdoc.cs: Change -o semantics to be a directory
	  prefix, e.g. `mdoc export-html-webdoc -o cache.new foo.tree` will
	  output files into `cache.new/foo` instead of directly into
	  `cache.new`.  This makes it easier to specify more than one
	  .tree/.zip file on the command line.
