@@ -221,6 +221,13 @@
         <p>
             cref=<tt>T:Mono.DocTest.DocAttribute</tt>.
             </p>
+        <table width="100%">
+          <tr>
+            <td style="color:red">red</td>
+            <td style="color:blue">blue</td>
+            <td style="color:green">green</td>
+          </tr>
+        </table>
         <table class="CodeExampleTable">
           <tr>
             <td>
