@@ -40,6 +40,15 @@
                 <para>
             cref=<c>T:Mono.DocTest.DocAttribute</c>.
             </para>
+                <format type="text/html">
+                    <table width="100%">
+                        <tr>
+                            <td style="color:red">red</td>
+                            <td style="color:blue">blue</td>
+                            <td style="color:green">green</td>
+                        </tr>
+                    </table>
+                </format>
                 <code lang="C#" src="../DocTest.cs#DocAttribute Example">[Doc ("documented class")]
 class Example {
 	[Doc ("documented field")] public string field;
